migrator-tests/src/snapshots/migrator_tests__source_down::test_rollback_till_pointer_mig_id::{{closure}}__two_way___strictsingle field name change strategy: renamemigdir_state_6.snap
---
source: migrator-tests/src/lib.rs
expression: migration_queries_snaps
---
header: Basename - migration_1_init. Extension - up.surql
 Migration Query: 
DELETE migration;
DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD attributes ON animal TYPE array<string> PERMISSIONS FULL;
DEFINE FIELD createdAt ON animal TYPE datetime PERMISSIONS FULL;
DEFINE FIELD id ON animal TYPE record<animal> PERMISSIONS FULL;
DEFINE FIELD species ON animal TYPE string PERMISSIONS FULL;
DEFINE FIELD updatedAt ON animal TYPE datetime PERMISSIONS FULL;
DEFINE FIELD velocity ON animal TYPE int PERMISSIONS FULL;
DEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE;


DEFINE EVENT event1 ON animal WHEN (species = 'Homo Erectus') AND (velocity > 545) THEN (SELECT * FROM crop);
DEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats);


DEFINE TABLE animal_snake_case SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD attributes ON animal_snake_case TYPE array<string> PERMISSIONS FULL;
DEFINE FIELD created_at ON animal_snake_case TYPE datetime PERMISSIONS FULL;
DEFINE FIELD id ON animal_snake_case TYPE record<animal_snake_case> PERMISSIONS FULL;
DEFINE FIELD species ON animal_snake_case TYPE string PERMISSIONS FULL;
DEFINE FIELD updated_at ON animal_snake_case TYPE datetime PERMISSIONS FULL;
DEFINE FIELD velocity ON animal_snake_case TYPE int PERMISSIONS FULL;




DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD color ON crop TYPE string PERMISSIONS FULL;
DEFINE FIELD id ON crop TYPE record<crop> PERMISSIONS FULL;




DEFINE TABLE eats SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD createdAt ON eats TYPE datetime PERMISSIONS FULL;
DEFINE FIELD id ON eats TYPE record<eats> PERMISSIONS FULL;
DEFINE FIELD in ON eats TYPE record<any> PERMISSIONS FULL;
DEFINE FIELD out ON eats TYPE record<any> PERMISSIONS FULL;
DEFINE FIELD place ON eats TYPE string PERMISSIONS FULL;




DEFINE TABLE eats_snake_case SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD created_at ON eats_snake_case TYPE datetime PERMISSIONS FULL;
DEFINE FIELD id ON eats_snake_case TYPE record<eats_snake_case> PERMISSIONS FULL;
DEFINE FIELD in ON eats_snake_case TYPE record<any> PERMISSIONS FULL;
DEFINE FIELD out ON eats_snake_case TYPE record<any> PERMISSIONS FULL;
DEFINE FIELD place ON eats_snake_case TYPE string PERMISSIONS FULL;




DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD checksum_down ON migration TYPE string PERMISSIONS FULL;
DEFINE FIELD checksum_up ON migration TYPE string PERMISSIONS FULL;
DEFINE FIELD id ON migration TYPE record<migration> PERMISSIONS FULL;
DEFINE FIELD name ON migration TYPE string PERMISSIONS FULL;
DEFINE FIELD timestamp ON migration TYPE int PERMISSIONS FULL;




DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD createdAt ON planet TYPE datetime PERMISSIONS FULL;
DEFINE FIELD firstName ON planet TYPE string PERMISSIONS FULL;
DEFINE FIELD id ON planet TYPE record<planet> PERMISSIONS FULL;
DEFINE FIELD labels ON planet TYPE array<string> PERMISSIONS FULL;
DEFINE FIELD population ON planet TYPE int PERMISSIONS FULL;
DEFINE FIELD updatedAt ON planet TYPE datetime PERMISSIONS FULL;




DEFINE TABLE student SCHEMAFULL PERMISSIONS NONE;
DEFINE FIELD age ON student TYPE int PERMISSIONS FULL;
DEFINE FIELD createdAt ON student TYPE datetime PERMISSIONS FULL;
DEFINE FIELD id ON student TYPE record<student> PERMISSIONS FULL;
DEFINE FIELD university ON student TYPE string PERMISSIONS FULL;
DEFINE FIELD updatedAt ON student TYPE datetime PERMISSIONS FULL;

header: Basename - migration_1_init. Extension - down.surql
 Migration Query: 
REMOVE TABLE animal;
REMOVE TABLE animal_snake_case;
REMOVE TABLE crop;
REMOVE TABLE eats;
REMOVE TABLE eats_snake_case;
REMOVE TABLE migration;
REMOVE TABLE planet;
REMOVE TABLE student;

header: Basename - migration_2_gen_after_init. Extension - up.surql
 Migration Query: 
Empty migration

header: Basename - migration_2_gen_after_init. Extension - down.surql
 Migration Query: 
Empty migration

header: Basename - migration_3_gen_after_init. Extension - up.surql
 Migration Query: 
Empty migration

header: Basename - migration_3_gen_after_init. Extension - down.surql
 Migration Query: 
Empty migration
